<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_record"
        android:icon="@drawable/ic_action_microphone"
        android:showAsAction="always"
        android:title="@string/button_start_record_activity"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:showAsAction="ifRoom"
        android:title="@string/menu_about"/>

    <item
        android:id="@+id/action_show_all_audio"
        android:showAsAction="ifRoom"
        android:title="@string/menu_show_all_audio"/>

</menu>
