<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2009, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300sp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginBottom="10dip"
              android:layout_marginRight="10dip"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:text="@string/what_to_do_with_ringtone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <Button
        android:id="@+id/button_make_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="12dp"
        android:text="@string/make_default_ringtone_button"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:id="@+id/button_choose_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="12dp"
        android:text="@string/choose_contact_ringtone_button"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/button_do_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="?attr/selectableItemBackground"
        android:gravity="right"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="12dp"
        android:text="@string/do_nothing_with_ringtone_button"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
