<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_bg" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent_bg"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background_toolbar_translucent"
            android:elevation="5dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Album Name"

                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_margin="10dp"
            android:layout_weight="1"

            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <!--ImageView
                 android:id="@+id/bkgnd"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/bkgnd"-->

                <com.mp3cutter.ringtonemaker.Ringdroid.WaveformView
                    android:id="@+id/waveform"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="15dp" />

                <com.mp3cutter.ringtonemaker.Ringdroid.MarkerView
                    android:id="@+id/endmarker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/end_marker"
                    android:nextFocusDown="@+id/info"
                    android:nextFocusUp="@+id/startmarker"
                    android:src="@drawable/up_dragger" />

                <com.mp3cutter.ringtonemaker.Ringdroid.MarkerView
                    android:id="@+id/startmarker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/start_marker"
                    android:nextFocusDown="@+id/endmarker"
                    android:src="@drawable/bottom_dragger" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:nextFocusDown="@+id/play"
            android:nextFocusUp="@+id/endmarker"
            android:text="Demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:gravity="center">

            <ImageButton
                android:id="@+id/rew"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/rewind"
                android:src="@drawable/ic_action_playback_prev" />

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton"
                android:layout_width="71dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_action_playback_play" />

            <ImageButton
                android:id="@+id/ffwd"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="6dip"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/ffwd"
                android:src="@drawable/ic_action_playback_next" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:id="@+id/mark_start"
                android:layout_width="0dp"
                android:layout_height="31dip"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/starttext"
                android:text="@string/start_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/starttext"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="31dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:singleLine="true"

                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_micro" />

            <TextView
                android:id="@+id/mark_end"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="31dip"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/endtext"
                android:text="@string/end_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endtext"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="31dip"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:singleLine="true"

                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_micro" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>